--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@vercel/postgres": "^0.7.2",
     "classnames": "^2.5.1",
     "core-js": "^3.36.0",
-    "next": "14.1.0",
+    "next": "^14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0"
